<resources>
    <string name="app_name">FiscalizaBR</string>
    <string name="action_settings">Configurações</string>

    <string name="nome_proponente">NOME DO PROPONENTE</string>
    <string name="municipio">MUNICÍPIO / UF</string>
    <string name="objeto">OBJETO</string>
    <string name="valor_global">VALOR GLOBAL</string>
    <string name="inicio_vigenia">INICIO DA VIGÊNCIA</string>
    <string name="title_activity_detalhar_convenio">Detalhes do Convênio</string>

    <!-- Dados do Convênio -->
    <string name="dados_convenio">DADOS DO CONVÊNIO</string>
    <string name="assinatura_convenio_publicacao">ANO DE ASSINATURA / CONVÊNIO / PUBLICAÇÃO</string>
    <string name="data_assinatura">DATA DA ASSINATURA</string>
    <string name="data_publicacao">DATA DE PUBLICAÇÃO</string>
    <string name="assinado_empenhado_publicado">ASSINADO / EMPENHADO / PUBLICADO</string>
    <string name="inicio_vigencia">INICIO DA VIGÊNCIA</string>
    <string name="fim_vigencia">FIM DA VIGÊNCIA</string>
    <string name="justificativa">JUSTIFICATIVA</string>
    <string name="modalidade">MODALIDADE</string>
    <string name="nome_programa">NOME DO PROGRAMA</string>
    <string name="numero_convenio">NÚMERO DO CONVÊNIO</string>
    <string name="numero_interno">NÚMERO INTERNO</string>
    <string name="numero_processo">NÚMERO DO PROCESSO</string>
    <string name="qtd_aditivos">QUANTIDADE DE ADITIVOS</string>
    <string name="qtd_empenhos">QUANTIDADE DE EMPENHOS</string>
    <string name="qtd_prorrogas">QUANTIDADE DE PRORROGAS</string>
    <string name="situacao_convenio">SITUAÇÃO CONVÊNIO</string>
    <string name="subsituacao_convenio">SUBSITUAÇÃO CONVÊNIO</string>
    <string name="ultimo_empenho">ULTIMO EMPENHO</string>
    <string name="ultimo_pagamento">ULTIMO PAGAMENTO</string>

    <!-- Orgão Concedente -->
    <string name="orgao_concedente">ORGÃO CONCEDENTE</string>
    <string name="cargo_concedente_responsavel">CARGO DO CONCEDENTE RESPONSÁVEL</string>
    <string name="nome_orgao_concedente">NOME DO ORGÃO CONCEDENTE</string>
    <string name="nome_responsavel_concedente">NOME DO CONCEDENTE RESPONSÁVEL</string>

    <!-- Orgão Superior -->
    <string name="orgao_superior">ORGÃO SUPERIOR</string>
    <string name="nome_orgao_superior">NOME DO ORGÃO SUPERIOR</string>
    <string name="permite_ajuste_cronograma_fisico">PERMITE AJUSTE NO CRONOGRAMA FISICO?</string>
    <string name="possui_aditivo">POSSUI ADITIVO?</string>
    <string name="prorrogas_de_oficio">PRORROGAS DE OFICIO</string>

    <!-- PROPONENTE -->
    <string name="proponente">PROPONENTE</string>
    <string name="bairro_proponente">BAIRRO</string>
    <string name="cargo_responsavel_proponente">CARGO RESPONSÁVEL</string>
    <string name="cep_proponente">CEP</string>
    <string name="endereco_proponente">ENDEREÇO</string>
    <string name="esfera_administrativa">ESFERA ADMINISTRATIVA</string>
    <string name="municipio_proponente">MUNICÍPIO</string>
    <string name="nome_responsavel">NOME DO RESPONSÁVEL</string>
    <string name="qualificacao">QUALIFICAÇÃO</string>
    <string name="regiao">REGIÃO</string>
    <string name="uf">UF</string>

    <!-- PROPOSTA -->
    <string name="proposta">PROPOSTA</string>
    <string name="ano_proposta">ANO DA PROPOSTA</string>
    <string name="data_inclusao">DATA DE INCLUSÃO</string>
    <string name="identificacao">IDENTIFICAÇÃO</string>
    <string name="numero_proposta">NÚMERO DA PROPOSTA</string>

    <!-- VALORES -->
    <string name="valores">VALORES</string>
    <string name="contrapartida_financeira">CONTRAPARTIDA FINANCEIRA</string>
    <string name="contrapartida_financeira_bens_servicos">CONTRAPARTIDA FINANCEIRA DE BENS E SERVIÇOS</string>
    <string name="valor_empenhado">VALOR EMPENHADO</string>
    <string name="valor_desembolsado">VALOR DESEMBOLSADO</string>
    <string name="repasse_uniao">REPASSE DA UNIÃO</string>
    <string name="contrapartida_total">CONTRAPARTIDA TOTAL</string>

    <string name="title_activity_pesquisar_convenio">Procurar Convênios</string>

    <string name="selecionar_data">Clique aqui para selecionar uma data</string>
    <string name="municipio_pesquisar">Município</string>

    <string name="compartilhar">Compartilhar</string>
    <string name="favoritos_menu">Favoritos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="editar_localizacao">Editar localização</string>
    <string name="ordenar_lista">Ordenar Lista</string>
    <string name="title_activity_alterar_localizacao">Editar Localização</string>

    <string name="carregando_convenios">Carregando convênios</string>
    <string name="nao_possui_favoritos">Você ainda não possui Favoritos</string>

    <!-- Shared Preferences -->
    <string name="preference_cidade">com.paulo.fiscalizabr.PREFERENCE_CIDADE</string>
    <string name="preference_uf">com.paulo.fiscalizabr.PREFERENCE_UF</string>

    <string name="default_cidade">Brasília</string>
    <string name="default_uf">DF</string>

    <string name="resultado_busca_null">Não foram encontrados resultados para este município!</string>
    <string name="conexao_internet_null">Ops, verifique sua conexão com a Internet!</string>
    <string name="title_activity_convenios_pesquisa_detalhada">Resultados da pesquisa</string>

    <string name="situacao_publicacao_convenio">SITUAÇÃO DA PUBLICAÇÃO</string>
    <string name="nome_responsavel_pelo_proponente">NOME DO RESPONSÁVEL PELO PROPONENTE</string>
    <string name="title_activity_splash_screen_fiscaliza">SplashScreenFiscaliza</string>
    <string name="mensagem_splash_screen">Carregando dados dos nossos servidores</string>

    <string name="valor">Valor</string>
    <string name="vigencia">Vigência</string>

</resources>
